# mwe_model_loading_lighting

./: .gitmodules  CMakeLists.txt  changelog.txt  conanfile.txt  main.cpp
assets/backpack/: backpack.mtl
camera/: camera.cpp  camera.hpp
character/: character.hpp
graphics/: graphics.hpp
graphics/model_loading/: model_loading.cpp  model_loading.hpp
model_loading/: model_loading.cpp  model_loading.hpp
mouse/: mouse.cpp  mouse.hpp
shaders/: textured.frag
src/: main.cpp
src/graphics/: graphics.cpp  graphics.hpp
src/graphics/shaders/: matrix_transformation.vert
window/: window.hpp
